fixed gap in flexbox

--- a/style.css
+++ b/style.css
@@ -91,14 +91,21 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  
+  gap: 4rem;
+  flex-wrap: wrap;
 }
 
 .main-img img {
   border-radius: 10px;
   margin-bottom: 2rem;
+  flex: 1 1 350px;
+  min-width: 300px;
+  max-width: 400px;
 }
-
+.product-description {
+  flex: 2 1 400px;
+  min-width: 300px;
+}
 .thumbnail-imgs {
   display: flex;
   margin-bottom: 2rem;
@@ -134,7 +141,6 @@ nav {
   margin-bottom: 1.5rem;
 }
 
-
 .price-tag {
   display: flex;
   gap: 1rem;
@@ -166,7 +172,6 @@ nav {
   gap: 7rem;
 }
 
-
 .counter {
   display: flex;
   background-color: #f7f8fd;
@@ -176,7 +181,6 @@ nav {
   justify-content: space-evenly;
   gap: 8px;
   align-items: center;
-
 }
 
 .add-to-cart-button {
